--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,7 @@
-.container {
-  max-width: 36rem;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
+.container{
+  height: 670px;
+  display: flex;
+  align-items: center;
 }
 
 .header {
@@ -12,4 +12,8 @@
 
 .backToHome {
   margin: 3rem 0 0;
+}
+
+.layout{
+  flex-direction: column;
 }
