--- a/styles/global.css
+++ b/styles/global.css
@@ -13,8 +13,8 @@ body {
 }
 
 a {
-  color: #0070f3;
-  text-decoration: none;
+  color: #FFFFFF;
+  text-decoration: none ;
 }
 
 a:hover {
@@ -29,4 +29,8 @@ img {
 footer{
   display: flex;
   flex-direction: row;
+}
+
+Link{
+  text-decoration: none;
 }
