--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,10 +1,10 @@
 .container{
-  height: 670px;
   display: flex;
   align-items: center;
   background-color:cadetblue;
+  min-height: 100vh;
+  width: 100%;
 }
-
 .header {
   display: flex;
   flex-direction: column;
